update from Laptop

--- a/text_editing/pdf_edit/Master-Bachelorarbeit-Vorlage-IMTEK.tex
+++ b/text_editing/pdf_edit/Master-Bachelorarbeit-Vorlage-IMTEK.tex
@@ -110,10 +110,10 @@
 \begin{document}
 
 
-\subject{Masterarbeit}
+\subject{Master's Thesis}
 
 
-\title{Drehraten- und beschleunigungsbasierte Atemfrequenzmessung}
+\title{Indoor Localization based on Extended Kalman Filter and Calibration-free method}
 
 
 \author{Gürkan Karacocuk}
