update pdf from Laptop

--- a/text_editing/pdf_edit/Master-Bachelorarbeit-Vorlage-IMTEK.tex
+++ b/text_editing/pdf_edit/Master-Bachelorarbeit-Vorlage-IMTEK.tex
@@ -116,7 +116,7 @@
 \title{Indoor Localization based on Extended Kalman Filter and Calibration-free method}
 
 
-\author{Gürkan Karacocuk}
+\author{Yitong QUAN}
 
 
 \date{22. Dezember 2017}
@@ -146,7 +146,10 @@ Prof.~Dr.~YYY\bigskip{}
 \\
 \textbf{Betreuer}\smallskip{}
 \\
-Dr.-Ing. Fabian Höflinger}
+Dr.-Ing. Fabian Höflinger \bigskip{}
+\\
+Dr.-Ing. Rui Zhang\bigskip{}
+}
 
 \maketitle
 \cleardoublepage{}
@@ -165,8 +168,8 @@ bereits für eine andere Prüfung angefertigt wurde.
 
 \vspace{40mm}
 
-Gürkan Karacocuk\\
-Neuenburg, den 22. Dezember 2017
+Yitong QUAN\\
+Freiburg, 22. December 2017
 
 \cleardoublepage{}
 
